<resources>
    <string name="app_name">Github User</string>
    <string name="name">name</string>
    <string name="user">user</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="search_hint">Type a Keyword</string>
    <string name="colon">:</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="change_language_settings">Language</string>
</resources>